--- a/Natourus Project/css/style.css
+++ b/Natourus Project/css/style.css
@@ -50,6 +50,7 @@ left:40px;
 .heading-primary{
     color:#ffff;
     text-transform: uppercase;
+    backface-visibility: hidden;
 }
 
 .heading-primary-main{
@@ -57,6 +58,9 @@ left:40px;
     font-size: 60px;
     font-weight: 400px;
     letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
 
 }
 .heading-primary-sub{
@@ -64,4 +68,38 @@ left:40px;
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+    animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft{
+    0%{
+        opacity: 0;
+        transform: translate(-100px);
+    }
+
+    80%{
+        opacity: 0.7;
+        transform: translate(10px);
+
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes moveInRight{
+    0%{
+        opacity: 0;
+        transform: translate(100px);
+    }
+
+    80%{
+        opacity: 0.7;
+        transform: translate(-10px);
+
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
 }
